# external-d2-assistant

./: .gitmodules  CMakeLists.txt  LICENSE  main.cpp  menu.ui  overlay.cpp  overlay.h  overlay.ui
.github/workflows/: cmake.yml
dll/: CMakeLists.txt
dll/lib/minhook/include/: minhook.h
dll/src/: dllmain.cpp
dll/src/Networking/: ProtocolStructure.hpp  udpbase.cpp  udpbase.hpp
dll/src/dota/convar/: cvarsystem.cpp  cvarsystem.h
dll/src/dota/entity/: centityidentity.h  cgameentitysystem.h
dll/src/dota/gc/: gcclient.h
dll/src/dota/managers/: interfacemanager.cpp  interfacemanager.h
dll/src/dota/shared/: macro.h
dll/src/memory/: bytehook.h  function.h  interfacefinder.h  memory.h  patternscanner.cpp  patternscanner.h  virtualclass.h  vmt.h  winprocess.cpp  winprocess.h
dll/src/networking/: datagram.hpp  udpbase.cpp  udpbase.hpp
fonts/: fonts.qrc
memtables/: dota2.CT  test1.CT
resources/: resources.qrc
src/: entry.cpp  entry.hpp
src/cpp/: staticconfig.h
src/cpp/gui/console/src/: console.cpp  console_p.hpp
src/cpp/launch/: gamelaucher.cpp  gamelaucher.hpp  injector.cpp  injector.hpp
src/cpp/memory/: memorytools.cpp  memorytools.hpp  sharedmemory.cpp  sharedmemory.hpp
src/dota/: BaseNPC.h
src/gui/: debugconsole.cpp  debugconsole.h
src/memory/: Offset.h  address.hpp  loop.cpp  loop.cxx  loop.h  memory.cpp  memory.h  memoryread.cpp  memoryread.h  memtools.cxx  memtools.hxx  sharedmemory.cpp  sharedmemory.hpp
src/memory/offsets/: offsets.h
src/memory/winapi/: winapiwrapper.cpp  winapiwrapper.hpp
src/qml/: main.qml  qml.qrc
src/qml/ui/buttons/: PushButton.qml  ToolButton.qml
src/qml/ui/checkboxes/: Checkbox.qml
src/qml/widgets/: ConsoleWidget.qml  ConsoleWindow.qml  ControlPanel.qml  DebugConsole.qml
src/sdk/: classfinder.cpp  classfinder.hpp  macro.hpp
src/sdk/classes/: cexternalfunction.hpp  cvirtualclass.hpp
src/sdk/classes/entity/: cabstractentitysystem.hpp  cbaseentity.hpp  centityidentity.hpp  cgameentitysystem.hpp
src/tools/: utility.cpp  utility.h
submodules/: CMakeLists.txt
